Fix section 9 overflow

--- a/src/components/section9/section9.module.css
+++ b/src/components/section9/section9.module.css
@@ -9,6 +9,7 @@
   text-align: center;
   padding-top: 80px;
   padding-bottom: 80px;
+  overflow: hidden;
 }
 
 .limit h2 {
